meecast (0.6.10) unstable; urgency=low

  * Added icons for hko.gov.hk
  * Added icons for foreca.com
  * Updated Chinese, Bulgarian, Catalan, Turkish, Germany, Dutch translations
  * Added new iconset Atoms. Thanks Andrew Zhilin
  * Fixed problem with feels like in source gismeteo.ru
  * Fixed problem with timezone in source gismeto.ru

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Nov 2012 19:31:23 +0200

meecast (0.6.9) unstable; urgency=low

  * Fixed icon ICY in Epona set 
  * Fixed problem with current weather in gismeteo.ru source
  * Added icon and description string to gismeteo.ru 
  * Fixed problem with weather forecast in gismeteo.ru for Australia
  * Changed splash. Thanks Andrew Zhilin (wazd)
  * Added icon for hko.gov.hk
  * Added icons for foreca.com
  * Added UV-index to hko.gov.hk source
  * Fixed problem with N/A UV-index
  * Disabled label "Show on map" if case map isn't available
  * Added new iconset Noun  - The Noun Project icons are designed by Adam
    Whitcroft from The Noun Project. http://thenounproject.com"
  * Moved station Townsville from Victoria to QLD and station Canberra 
    from NSW  to ACT in bom.gov.au source
  * Added checking internet connection before updating in Widget mode
  * Fixed problem with switch off Updating parameter 
  * Updated Russian, Finish, Norwegian, Albanian, Catalan, Portuguese translations

 -- Vlad Vasiliev <vlad@gas.by>  Wen, 19 Dec 2012 10:31:23 +0200

meecast (0.6.8) unstable; urgency=low

  * Added icon and description string to gismeteo.ru 
  * Added data UV-index and Visible for weather.com source
  * Added visible units
  * Decreased cycle count to 1 for Map
  * Added Arabic translation. Thanks Tarad Alfandi aka ttt0600
  * Adeed Norwegian translation. Thanks Peer-Atle Motland aka Pam
  * Updated Albanian, Catalan, Swedish, Portuguese translations

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Nov 2012 19:31:23 +0200

meecast (0.6.7) unstable; urgency=low

  * Added icon to hko.gov.hk