@@ -3,9 +3,10 @@ meecast (0.6.10) unstable; urgency=low
   * Added icons for hko.gov.hk
   * Added icons for foreca.com
   * Updated Chinese, Bulgarian, Catalan, Turkish, Germany, Dutch translations
-  * Added new iconset Atoms. Thanks Andrew Zhilin
+  * Added new iconset Atmos. Thanks Andrew Zhilin
   * Fixed problem with feels like in source gismeteo.ru
   * Fixed problem with timezone in source gismeto.ru
+  * Fixed problem with updating weather forecast data for new station 
 
  -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Nov 2012 19:31:23 +0200
 
